-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    4.1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2012 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.1
-----------------

6/7/13
    - Made non-convergent results more obvious by not printing
      the standard output tables (can be overridden with new
      OUT_FORCE option) and making the "did not converge"
      more prominent.

5/1/13
    - Changed behavior of branch angle difference limits so that
      0 is interpreted as unbounded only if both ANGMIN and ANGMAX
      are zero. Added note about this to docs in various places.

4/26/13
    - DC OPF now correctly sets voltage magnitudes to 1 p.u.
      in results.

3/29/13
    - Performance optimizations in @opt_model for cases with
      large numbers of variable sets and linear constraints
      or costs specified as entire rows (all columns as
      opposed to specific var sets).
      
3/13/13
    - Added to scale_cost() the option to scale the gencost
      (specifically the quantity axis of the marginal cost function)
      corresponding to any modified dispatchable load. Simply add
      gencost as additional input and output args.
    - Empty 'got' and 'expected' arguments to t_is() now
      count as a passing test instead of an error, as long as
      the dimensions match.

2/12/13
    - Fixed bug causing value of opt.verbose to be ignored in
      qps_gurobi().

12/14/12
    - Removed code in fmincopf() that attempts to find an interior
      starting point when using the interior point solver. It did
      not seem to help and caused errors for certain cases with
      DC lines (and probably other extensions).

10/1/12
    - Updates to have_fcn() and mpver() to better handle case where
      Optimization Toolbox is installed, but with a valid license.

8/30/12